Group Processor does not check if there is anything to spill

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • QE 2025-05-12, QE 2025-05-26
    • None
    • None
    • None
    • None
    • None
    • None
    • None
    • 0

      When asked to spill() after groups have been already created, group_processor calls readGroups and in that method it assumes that there are more data to read. If all data has been returned and there is nothing to spill this will fail.

      We should make sure that we have indeed spilled something.

            Assignee:
            Foteini Alvanaki
            Reporter:
            Foteini Alvanaki
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: