SERVER-105201 Check there is something to spill (#36225)

GitOrigin-RevId: f29b53cfc9fba33b1837439caa2fc474fcbcf45a